[package]
name = "cpp_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "*", default-features = true, features = [
    "matrixmultiply-threading",
] }
ndarray-stats = "*"
pathfinding = "*"
ordered-float = "*"
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
